--- a/package.json
+++ b/package.json
@@ -3,30 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.1.0",
+    "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
+    "cookie-signature": "^1.2.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.19.2",
+    "fastify": "^4.27.0",
+    "fastify-formbody": "^5.3.0",
+    "fastify-websocket": "^4.3.0",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "leveldown": "^6.1.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "pouchdb-adapter-leveldb": "^8.0.1",
+    "querystring": "^0.2.1",
     "random-words": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "rxdb": "^15.17.0",
     "rxdb-hooks": "^5.0.2",
     "rxjs": "^7.8.1",
     "shortid": "^2.2.16",
     "stream": "^0.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
